# herbarium-specimen-tools

./: .env.example  .gitignore  .pre-commit-config.yaml  BOUNDARY_COMPLIANCE.md  CHANGELOG.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  NEXT_STEPS.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  README.md  SECURITY.md  WORKSPACE_BOUNDARIES.md  cli.py  pyproject.toml  pytest.ini  requirements.txt  start_review_server.sh
.github/workflows/: ci.yml
.research/: COLLECTIVE_INTEGRATION.md  HOME_CONSOLIDATION.md  ORGANIC_RESEARCH.md  PARALLEL_RESEARCH_FRAMEWORK.md  README.md
.research/advocacy/: template-comparative.md  template-findings.md
config/: README.md  config.default.toml  config.gpt4omini.toml  config.ocr-only.toml  config.s3-cached.toml  config.tesseract-only.toml  config.windows.toml  image_source_examples.toml  image_sources.toml
config/prompts/: image_to_dwc.system.prompt  image_to_dwc.user.prompt  image_to_dwc_cot.system.prompt  image_to_dwc_cot.user.prompt  image_to_dwc_few_shot.system.prompt  image_to_dwc_few_shot.user.prompt  image_to_dwc_ocr_first.system.prompt  image_to_dwc_ocr_first.user.prompt  image_to_dwc_v2.system.prompt  image_to_dwc_v2.user.prompt  image_to_text.system.prompt  image_to_text.user.prompt  text_to_dwc.system.prompt  text_to_dwc.user.prompt
config/rules/: README.md  dwc_rules.toml  institutions.toml  vocab.toml
config/schemas/: abcd.xsd  darwin_core_extraction.json  dwc.xsd  provenance_fragment.json
docs/: COMPLETE_DATA_TRACKING_SUMMARY.md  DATASET_RUN_METRICS.md  DATA_LIFECYCLE_GAP_ANALYSIS.md  ENTRANT_WORKFLOW_IMPLEMENTATION.md  LIFECYCLE_TRACKING_SUMMARY.md  PROVENANCE_TRACKING.md  api-reference.md  correction-pipeline-design.md  deployment.md  development.md  human-in-loop-workflow.md
docs/diagrams/: README.md
dwc/: AGENTS.md  __init__.py  archive.py  mapper.py  normalize.py  schema.py  schema_manager.py  validators.py
engines/: __init__.py  errors.py  language_codes.py  multilingual.py  protocols.py
engines/gpt/: __init__.py  image_to_dwc.py  image_to_text.py  text_to_dwc.py
engines/multilingual/: __init__.py
engines/paddleocr/: __init__.py
engines/rules/: __init__.py  setup.py  text_to_dwc.py
engines/tesseract/: __init__.py
engines/vision_swift/: Package.swift  __init__.py  run.py
examples/: provenance_demo.py  test_confidence_routing.py  test_data_lifecycle.py  test_entrant_workflow.py  test_hybrid_cascade.py
examples/sample_data/: README.md  raw.jsonl
io_utils/: __init__.py  cached_source.py  candidate_models.py  candidates.py  database.py  image_source.py  jit_cache.py  logs.py  migrate.py  ocr_cache.py  path_registry.py  read.py  spreadsheets.py  write.py
mobile/: AWS_DEPLOYMENT.md  BRANCH_ASSESSMENT.md  DESKTOP_VS_MOBILE.md  PR_SUMMARY.md  README.md  SECURITY.md  compare-branches.sh  deploy-aws.sh  generate_password_hash.py  index.html  lambda_handler.py  manifest.json  requirements-lambda.txt  run_local_server.py  run_mobile_server.py  run_server.py  sw.js  template.yaml  upload-data-to-s3.sh
mobile/css/: app.css
mobile/icons/: README.md
mobile/js/: api.js  app.js  error-tracker.js
preprocess/: __init__.py  flows.py
provenance/: __init__.py  dag.py  fragment.py  specimen_index.py
qc/: __init__.py  confidence_validator.py  gbif.py
scripts/: build_filename_hash_mapping.py  build_image_hashes.py  convert_openrouter_to_queue.py  debug_review_notes.py  diagnose_ocr_overlay.py  enrich_ocr.py  generate_sample_images.py  quick_start.bat  quick_start.sh  setup_env.py
src/: __init__.py  config.py  logging_config.py  middleware.py
src/core/: __init__.py
src/correction/: __init__.py  field_parser.py  review_queue.py
src/dwc/: __init__.py  normalize.py  schema.py
src/extraction/: __init__.py  (+2 more)
templates/: base.html  login.html  queue.html  specimen.html
test_results/: VALIDATION_ANALYSIS.md  validation_results.json
tests/: test_engine.py  test_engines.py  test_events.py  test_local_server.py  test_mobile_api.py  test_review_notes_e2e.py  test_storage.py  test_validators.py  validate_optimizations.py
(+446 files in other folders)
