[project]
name = "herbarium-specimen-tools"
version = "0.1.0"
description = "Open-source tools for herbarium digitization workflows"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Devvyn Murphy", email = "noreply@github.com"}]
keywords = ["herbarium", "digitization", "darwin-core", "specimens", "ocr", "biodiversity"]

dependencies = [
    # Web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "PyJWT>=2.8.0",
    # GBIF integration
    "pygbif>=0.6.3",
    # Async/HTTP
    "aiohttp>=3.9.0",
    "httpx>=0.25.0",
    # Date/time utilities
    "python-dateutil>=2.8.2",
    # Image processing
    "Pillow>=10.0.0",
    # OCR engines
    "anthropic>=0.25.0",
    "openai>=1.12.0",
    "google-cloud-vision>=3.5.0",
    "azure-ai-vision-imageanalysis>=1.0.0",
    # Configuration
    "tomli>=2.0.1",
    "tomli-w>=1.0.0",
    # Browser automation (for web scraping validation)
    "playwright>=1.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
]

analytics = [
    "duckdb>=0.9.0",
]

lambda = [
    "mangum>=0.17.0",
    "boto3>=1.40.39",
]

all = ["herbarium-specimen-tools[dev,analytics,lambda]"]

[project.urls]
Homepage = "https://github.com/devvyn/herbarium-specimen-tools"
Repository = "https://github.com/devvyn/herbarium-specimen-tools"
Issues = "https://github.com/devvyn/herbarium-specimen-tools/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q --strict-markers"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pygbif.*",
    "passlib.*",
    "azure.*",
    "google.cloud.*",
]
ignore_missing_imports = true
